fix(email activation): left align text content on verification page

--- a/src/modules/settings/LoginForm/LoginForm.scss
+++ b/src/modules/settings/LoginForm/LoginForm.scss
@@ -5,6 +5,6 @@
   flex-wrap: wrap;
 
   .email-feedback-text {
-    padding: $sidebar_space_medium $sidebar_space_large;
+    padding: $sidebar_space_small 0;
   }
 }
